# yh-stocks

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  functions.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  scheduled-scan.yml
data/countries/: France.csv  Germany.csv  Italy.csv  Spain.csv
data/indices/: AEX.csv  BEL 20.csv  CAC 40.csv  DAX.csv  FTSE 100.csv
src/: config.py  functions.py  logger_config.py  main.py
src/app/: server.py
src/app/charts/: kpi_comparison.py  price_history.py  projection.py
src/app/models/: inputs.py  results.py
src/app/routes/: index.py  simulate.py
src/app/services/: simulation_service.py  stock_service.py  tax_service.py
src/app/static/: style.css
src/app/templates/: base.html  index.html
src/app/templates/partials/: error.html  kpi_table.html  results.html  simulation_table.html
tests/unit/: test_simulation_service.py  test_tax_service.py
