[tool.poetry]
name = "yahoo stocks"
version = "0.1.0"
description = "Simple script to fetch & manipulate stocks data from the Yahoo Finance API for insights"
authors = ["f1she3 <f1she3@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytickersymbols = "^1.17.6"
yfinance = "^1.1.0"
pandas = "^3.0.0"
pyyaml = "^6.0.3"
rich = "^14.3.2"

[tool.poetry.group.dev.dependencies]
poetry = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
