[project]
name = "yahoo-stocks"
version = "0.1.0"
description = "French investment simulator — historical stock KPIs + tax-aware projection for CTO, PEA, and Assurance-vie"
authors = [{ name = "f1she3", email = "f1she3@protonmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytickersymbols>=1.17.10,<2",
    "yfinance>=1.2.0,<2",
    "pandas>=3.0.2,<4",
    "pyyaml>=6.0.3,<7",
    "rich>=14.3.3,<16.0.0",
    "fastapi>=0.115.0,<1",
    "uvicorn[standard]>=0.34.0,<1",
    "jinja2>=3.1.0,<4",
    "python-multipart>=0.0.20,<1",
    "pydantic>=2.10.0,<3",
    "plotly>=6.0.0,<7",
    "diskcache>=5.6.0,<6",
    "numpy-financial>=1.0.0,<2",
    "python-json-logger>=3.1.0,<4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0,<1",
    "mypy>=1.13.0,<2",
    "pandas-stubs>=2.2.0",
    "pytest>=8.3.0,<9",
    "pytest-cov>=6.0.0,<7",
    "pytest-mock>=3.14.0,<4",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["yfinance.*", "pytickersymbols.*", "diskcache.*", "numpy_financial.*", "plotly.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
