[project]
name = "yahoo-stocks"
version = "0.1.0"
description = "Simple script to fetch & manipulate stocks data from the Yahoo Finance API for insights"
authors = [{ name = "f1she3", email = "f1she3@protonmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytickersymbols>=1.17.10,<2",
    "yfinance>=1.5.1,<2",
    "pandas>=3.0.5,<4",
    "pyyaml>=6.0.3,<7",
    "rich>=14.3.3,<16.0.0",
]

[tool.uv]
package = false
